// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DashboardCardBody /> renders correctly 1`] = `
<CardBody
  className=""
>
  content
</CardBody>
`;

exports[`<DashboardCardBody /> renders loading correctly 1`] = `
<CardBody
  className=""
>
  <Loading
    text="Loading"
  />
</CardBody>
`;
